--- a/pages/index.css
+++ b/pages/index.css
@@ -1,15 +1,13 @@
 @font-face {
-  font-family: 'CS-Bold';
-  src: url('../vendor/ABCCulturalService-Bold.woff') format('woff');
+    font-family: 'CS-Bold';
+    src: url('../vendor/ABCCulturalService-Bold.woff') format('woff');
 }
+
 @font-face {
     font-family: 'CS-Medium';
     src: url('../vendor/ABCCulturalService-Medium.woff') format('woff');
 }
-/* @font-face {
-    font-family: 'CS-MixEx';
-    src: url('../vendor/ABCCulturalService-MixExtended.woff') format('woff');
-} */
+
 @font-face {
     font-family: 'CS-BoldMix';
     src: url('../vendor/ABCCulturalService-BoldMix.woff') format('woff');
@@ -33,8 +31,9 @@ body {
     overflow-x: hidden;
     position: relative;
 }
+
 .body__star {
-    position: absolute;   
+    position: absolute;
     max-width: 3400px;
     left: -1400px;
     top: 600px;
@@ -42,26 +41,41 @@ body {
     -moz-animation: spin 80s linear infinite;
     animation: spin 80s linear infinite;
 }
-@-moz-keyframes spin { 
-    100% { -moz-transform: rotate(360deg); } 
+
+@-moz-keyframes spin {
+    100% {
+        -moz-transform: rotate(360deg);
+    }
 }
-@-webkit-keyframes spin { 
-    100% { -webkit-transform: rotate(360deg); } 
+
+@-webkit-keyframes spin {
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
 }
-@keyframes spin { 
-    100% { 
-        -webkit-transform: rotate(360deg); 
-        transform:rotate(360deg); 
-    } 
+
+@keyframes spin {
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
-p, h1, h2, h3, h4, h5 {
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5 {
     margin-block-start: 0em;
     margin-block-end: 0em;
 }
+
 * {
     padding: 0;
     margin: 0;
 }
+
 :root {
     --biege: #EDF1E7;
     --black: #312E29;
@@ -88,6 +102,7 @@ p, h1, h2, h3, h4, h5 {
     overflow: hidden;
     z-index: 1;
 }
+
 .hero__h1 {
     font-family: 'CS-BoldMix';
     font-size: 120px;
@@ -96,11 +111,13 @@ p, h1, h2, h3, h4, h5 {
     font-weight: 400;
     line-height: 30px;
     padding-top: 305px;
-    text-transform: uppercase;   
+    text-transform: uppercase;
 }
+
 .hero__h1 span {
     font-size: 22px;
 }
+
 .hero__h2 {
     color: var(--black);
     font-family: 'CS-Bold';
@@ -111,28 +128,33 @@ p, h1, h2, h3, h4, h5 {
     max-width: 900px;
     margin: 25px auto;
 }
+
 .hero__image {
     position: absolute;
 }
+
 #hero__logo {
     top: 20px;
     left: 24px;
-    
+
 }
+
 #hero__about {
     top: 29px;
     right: 24px;
     height: 42px;
 }
+
 #hero__contact {
     bottom: 29px;
     right: 24px;
     height: 42px;
 }
+
 .hero__red-container {
     -webkit-animation: rotationRed 20s linear infinite;
-	        animation: rotationRed 20s linear infinite;
-            animation-timing-function: cubic-bezier(0.1, 0.2, 0.2, 0.1);
+    animation: rotationRed 20s linear infinite;
+    animation-timing-function: cubic-bezier(0.1, 0.2, 0.2, 0.1);
     width: 55vw;
     height: 35vh;
     position: absolute;
@@ -140,35 +162,46 @@ p, h1, h2, h3, h4, h5 {
     right: -24px;
     top: -24px;
 }
+
 .hero__red {
     -webkit-animation: spinRed 80s linear infinite;
     -moz-animation: spinRed 80s linear infinite;
     animation: spinRed 80s linear infinite;
 }
+
 /* @-moz-keyframes spinRed { 
     100% { -moz-transform: rotate(360deg); } 
 }
 @-webkit-keyframes spinRed { 
     100% { -webkit-transform: rotate(360deg); } 
 } */
-@keyframes spinRed { 
-    100% { 
-        -webkit-transform: rotate(360deg); 
-        transform:rotate(360deg); 
-    } 
+@keyframes spinRed {
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
+
 /* @-webkit-keyframes rotationRed {
 	from {-webkit-transform: rotate(-200deg);transform: rotate(-200deg);}
 	to {-webkit-transform: rotate(160);transform: rotate(160deg);}	
 } */
 @keyframes rotationRed {
-	from {-webkit-transform: rotate(-360deg);transform: rotate(-360deg);}
-	to {-webkit-transform: rotate(0deg);transform: rotate(0deg);}	
+    from {
+        -webkit-transform: rotate(-360deg);
+        transform: rotate(-360deg);
+    }
+
+    to {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
 }
+
 .hero__green-container {
     -webkit-animation: rotationGreen 20s linear infinite reverse;
-	        animation: rotationGreen 20s linear infinite reverse;
-            animation-timing-function: cubic-bezier(0.1, 0.2, 0.2, 0.1);
+    animation: rotationGreen 20s linear infinite reverse;
+    animation-timing-function: cubic-bezier(0.1, 0.2, 0.2, 0.1);
     width: 60vw;
     height: 30vh;
     position: absolute;
@@ -176,37 +209,30 @@ p, h1, h2, h3, h4, h5 {
     left: -24px;
     z-index: -1;
 }
+
 .hero__green {
     -webkit-animation: spinGreen 80s linear infinite;
     -moz-animation: spinGreen 80s linear infinite;
     animation: spinGreen 80s linear infinite;
 }
-/* @-moz-keyframes spinGreen { 
-    100% { -moz-transform: rotate(360deg); } 
-   
+
+@keyframes spinGreen {
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
-@-webkit-keyframes spinGreen { 
-    100% { -webkit-transform: rotate(360deg); } 
-} */
-@keyframes spinGreen { 
-    100% { 
-        -webkit-transform: rotate(360deg); 
-        transform:rotate(360deg); 
-    } 
-}
-/* @-webkit-keyframes rotationGreen {
-	from {-webkit-transform: rotate(160);transform: rotate(160);}
-	to {-webkit-transform: rotate(200deg);transform: rotate(200deg);}	
-} */
+
 @keyframes rotationGreen {
-	from {
+    from {
         -webkit-transform: rotate(0deg);
         transform: rotate(0deg);
     }
-	to {
+
+    to {
         -webkit-transform: rotate(360deg);
         transform: rotate(360deg);
-    }	
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -214,9 +240,11 @@ p, h1, h2, h3, h4, h5 {
         padding-top: 350px;
         font-size: 50px;
     }
+
     .hero__h1 span {
         font-size: 22px;
     }
+
     .hero__h2 {
         font-size: 40px;
         line-height: 100%;
@@ -230,21 +258,25 @@ p, h1, h2, h3, h4, h5 {
         left: 15px;
         z-index: 1;
     }
+
     #hero__about {
         top: 13px;
         right: 15px;
         z-index: 1;
         height: 22px;
     }
+
     #hero__contact {
         bottom: 13px;
         right: 15px;
         height: 22px;
     }
+
     #hero__red {
         bottom: 29px;
         right: 24px;
     }
+
     #hero__green {
         bottom: 29px;
         left: 24px;
@@ -263,6 +295,7 @@ p, h1, h2, h3, h4, h5 {
     padding-bottom: 40px;
     padding-top: 40px;
 }
+
 .article__column-container {
     display: flex;
     max-width: 1024px;
@@ -270,6 +303,7 @@ p, h1, h2, h3, h4, h5 {
     box-sizing: border-box;
     gap: 45px;
 }
+
 .article__h3 {
     font-size: 24px;
     color: var(--black);
@@ -278,36 +312,44 @@ p, h1, h2, h3, h4, h5 {
     text-transform: uppercase;
     font-family: 'CS-BoldMix';
 }
+
 .article__h3-image {
     height: 40px;
     width: auto;
     align-self: flex-start;
 }
+
 .article__h3-image_mobile {
     height: 20px;
 }
+
 .article__column {
     max-width: 815px;
     display: flex;
     flex-direction: column;
     gap: 16px;
 }
+
 .article__column:nth-child(1) {
     min-width: 160px;
 }
+
 .article__text_type_small {
     font-size: var(--text);
     font-family: 'CS-Medium';
     line-height: normal;
     color: var(--green);
 }
+
 .article__list {
     list-style: none;
 }
+
 .article__list-item {
     padding-bottom: 5px;
     display: flex;
 }
+
 .article__list-item:before {
     content: "•";
     font-size: 15px;
@@ -317,6 +359,7 @@ p, h1, h2, h3, h4, h5 {
     padding-left: 5px;
     min-width: 20px;
 }
+
 @media screen and (max-width: 768px) {
     .article {
         padding: 20px;
@@ -327,9 +370,11 @@ p, h1, h2, h3, h4, h5 {
     .article__h3 br {
         display: none;
     }
+
     .article__h3-image {
         display: none;
     }
+
     .article__column-container {
         gap: 8px;
         flex-direction: column;
@@ -358,6 +403,7 @@ p, h1, h2, h3, h4, h5 {
     display: flex;
     gap: 10px;
 }
+
 .contact__article {
     width: 100%;
     background-color: var(--biege);
@@ -366,11 +412,13 @@ p, h1, h2, h3, h4, h5 {
     padding-bottom: 40px;
     padding-top: 40px;
 }
+
 .contact__article img {
     height: 32px;
     width: 32px;
     padding-top: 10px;
 }
+
 .contact__article:nth-child(2) {
     width: 400px;
     display: flex;
@@ -378,28 +426,34 @@ p, h1, h2, h3, h4, h5 {
     justify-content: center;
     border-radius: 98px;
 }
+
 .contact__article:nth-child(2) a {
     text-decoration: none;
 }
+
 .contact__column-container {
     max-width: unset;
-}   
+}
+
 @media screen and (max-width: 768px) {
     .contact {
         width: calc(100vw - 16px);
         margin: 0 auto;
         flex-direction: column;
     }
+
     .contact__article {
         margin: 0;
         padding-top: 20px;
         padding-bottom: 20px;
     }
+
     .contact__article:nth-child(2) {
         width: 150px;
         height: 150px;
         border-radius: 50%;
     }
+
     .contact__column {
         gap: 8px;
     }
@@ -409,13 +463,16 @@ p, h1, h2, h3, h4, h5 {
 .footer {
     margin-top: 0;
 }
+
 .footer__column-container .article__column {
     width: 50%;
 }
+
 .footer__form {
     display: flex;
     gap: 40px;
 }
+
 .footer__form_input {
     border: none;
     background: transparent;
@@ -425,9 +482,11 @@ p, h1, h2, h3, h4, h5 {
     line-height: 24px;
     max-width: 144px;
 }
+
 .footer__form_input::placeholder {
     font-family: 'CS-BoldMix';
 }
+
 .footer__form_input,
 .footer__form_input:focus-visible {
     outline: none;
@@ -437,34 +496,38 @@ p, h1, h2, h3, h4, h5 {
     text-align: left;
     line-height: 24px;
 }
+
 .footer__form_button {
     background-color: transparent;
     border: none;
     cursor: pointer;
 }
+
 .footer .article__column:nth-child(1) {
     align-self: center;
 }
+
 .footer .article__column:nth-child(2) {
     display: flex;
     align-items: end;
 }
+
 @media screen and (max-width: 768px) {
     .footer {
         margin-top: 8px;
     }
+
     .footer__column-container .article__column {
         width: 100%;
     }
+
     .footer .article__column:nth-child(2) {
         align-items: flex-start;
     }
+
     .footer__form {
         gap: initial;
         justify-content: space-between;
     }
-    
+
 }
-
-
-
